Fix blurring timing and get rid of counter

--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body {
 
   -webkit-filter: grayscale(0) blur(0);
   filter: grayscale(0) blur(0);
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
+  -webkit-transition: .05s ease-in-out;
+  transition: .05s ease-in-out;
 }
 
 #icon:hover {
